--- a/RPA.KnowledgebaseSync/RPA.KnowledgebaseSync/RPA.KnowledgebaseSync.csproj
+++ b/RPA.KnowledgebaseSync/RPA.KnowledgebaseSync/RPA.KnowledgebaseSync.csproj
@@ -9,21 +9,21 @@
     <DocumentationFile>bin\$(Configuration)\RPA.KnowledgebaseSync.xml</DocumentationFile>
   </PropertyGroup>
 	<ItemGroup>
-		<Reference Include="System"/>
+		<Reference Include="System" />
 		
-		<Reference Include="System.Core"/>
-		<Reference Include="System.Xml.Linq"/>
-		<Reference Include="System.Data.DataSetExtensions"/>
+		<Reference Include="System.Core" />
+		<Reference Include="System.Xml.Linq" />
+		<Reference Include="System.Data.DataSetExtensions" />
 		
 		
-		<Reference Include="Microsoft.CSharp"/>
+		<Reference Include="Microsoft.CSharp" />
  		
-		<Reference Include="System.Data"/>
-		<Reference Include="System.Xml"/>
-    <Reference Include="System.Net.Http"/>
-    <Reference Include="System.Windows"/>
-    <Reference Include="System.Xaml"/>
-    <Reference Include="WindowsBase"/>
+		<Reference Include="System.Data" />
+		<Reference Include="System.Xml" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows" />
+    <Reference Include="System.Xaml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
@@ -44,6 +44,9 @@
   <ItemGroup>
     <Folder Include="Contracts\" />
     <Folder Include="Enums\" />
-    <Folder Include="Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
   </ItemGroup>
 </Project>
