--- a/RPA.KnowledgebaseSync/RPA.KnowledgebaseSync.Activities/RPA.KnowledgebaseSync.Activities.csproj
+++ b/RPA.KnowledgebaseSync/RPA.KnowledgebaseSync.Activities/RPA.KnowledgebaseSync.Activities.csproj
@@ -8,6 +8,8 @@
   <PropertyGroup>
     <OutputPath>bin\$(Configuration)\</OutputPath>
     <DocumentationFile>bin\$(Configuration)\RPA.KnowledgebaseSync.Activities.xml</DocumentationFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.1.0</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
