--- a/RPA.KnowledgebaseSync/RPA.KnowledgebaseSync.Activities.Design/RPA.KnowledgebaseSync.Activities.Design.csproj
+++ b/RPA.KnowledgebaseSync/RPA.KnowledgebaseSync.Activities.Design/RPA.KnowledgebaseSync.Activities.Design.csproj
@@ -30,6 +30,7 @@
     <PackageVersion>1.1.6</PackageVersion>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Designers\KbSyncDesigner.xaml" />
     <None Remove="Designers\KnowledgebaseSyncDesigner.xaml" />
     <None Remove="Designers\SyncKnowledgebaseDesigner.xaml" />
   </ItemGroup>
@@ -78,6 +79,9 @@
       <Generator>XamlIntelliSenseFileGenerator</Generator>
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Page>
+    <Page Include="Designers\KbSyncDesigner.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </Page>
     <Page Include="Designers\KnowledgebaseSyncDesigner.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
